--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,33 @@
             "email": "patrickadvance@gmail.com"
         }
     ],
+    "require": {
+        "php": "^7.3",
+        "laravel/framework": "^8.0",
+        "laravel/passport": "^10.0",
+        "laravel/socialite": "^5.0"
+    },
+    "require-dev": {
+        "facade/ignition": "^2.3.6",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Patrixsmart\\Adjustfly\\AdjustflyServiceProvider"
+            ]
+        }
+    },
+    "autoload": {
+        "psr-4": {
+            "Patrixsmart\\Adjustfly\\": "src/",
+            "Patrixsmart\\Adjustfly\\Database\\Factories\\": "database/factories/",
+            "Patrixsmart\\Adjustfly\\Database\\Seeders\\": "database/seeders/"
+        }
+    },
     "minimum-stability": "dev",
-    "require": {}
+    "prefer-stable": true
 }
