--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/framework": "^8.0",
-        "laravel/passport": "^10.0",
-        "laravel/socialite": "^5.0"
-    },
-    "require-dev": {
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "laravel/framework": "^8.0|^9.0"
     },
     "extra": {
         "laravel": {
